--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+        <meta charset="utf-8">
+        <title>DORIAN GRAY</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         
