--- a/index.html
+++ b/index.html
@@ -6,6 +6,44 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
+        <div class="conteneur">
+            <h1></h1>
+            <h2></h2>
+        </div>
+        <div class="conteneur2">
+            <img />
+            <h2></h2>
+        </div>
+        <div class="conteneur3">
+            <h1></h1>
+            <h3></h3>
+        </div>
+        <div class="conteneur4">
+            <h3></h3>
+            <img />
+        </div>
+        <div class="conteneur5">
+            <h1></h1>
+            <h4></h4>
+        </div>
+        <div class="conteneur6">
+            <img />
+            <h4></h4>
+        </div>
+        <div class="conteneur7">
+            <h1></h1>
+            <h5></h5>
+        </div>
+        <div class="conteneur8">
+            <h5></h5>
+            <img />
+        </div>
+        <div class="conteneur9">
+            <h1></h1>
+            <h6></h6>
+        </div>
+        <div class="conteneur10">
+            <img />
+        </div>
     </body>
 </html>
