--- a/index.html
+++ b/index.html
@@ -7,43 +7,67 @@
     </head>
     <body>
         <div class="conteneur">
-            <h1></h1>
-            <h2></h2>
+            <h1>DORIAN GRAY</h1>
+            <h2>DORIAN GRAY</h2>
         </div>
         <div class="conteneur2">
-            <img />
-            <h2></h2>
+            <img src="" alt="image"/>
+            <h2>.A</h2>
+            <h2>.B</h2>
+            <h2>.C</h2>
         </div>
         <div class="conteneur3">
-            <h1></h1>
-            <h3></h3>
+            <h1>DORIAN GRAY</h1>
+            <h3>DORIAN GRAY</h3>
         </div>
         <div class="conteneur4">
-            <h3></h3>
-            <img />
+            <h3>.A</h3>
+            <h3>.B</h3>
+            <h3>.C</h3>
+            <img src="" alt="image" />
         </div>
         <div class="conteneur5">
-            <h1></h1>
-            <h4></h4>
+            <h1>DORIAN GRAY</h1>
+            <h4>DORIAN GRAY</h4>
         </div>
         <div class="conteneur6">
-            <img />
-            <h4></h4>
+            <img src="" alt="image" />
+            <h4>.A</h4>
+            <h4>.B</h4>
+            <h4>.C</h4>
         </div>
         <div class="conteneur7">
-            <h1></h1>
-            <h5></h5>
+            <h1>DORIAN GRAY</h1>
+            <h5>DORIAN GRAY</h5>
         </div>
         <div class="conteneur8">
-            <h5></h5>
-            <img />
+            <h5>.A</h5>
+            <h5>.B</h5>
+            <h5>.C</h5>
+            <img src="" alt="image"/>
         </div>
         <div class="conteneur9">
-            <h1></h1>
-            <h6></h6>
+            <h1>DORIAN GRAY</h1>
+            <h6>DORIAN GRAY</h6>
         </div>
         <div class="conteneur10">
-            <img />
+            <img src="" alt="image"/>
+        </div>
+        <div class="fin">
+            <div class="DORIAN">
+                <h6>D</h6>
+                <h6>O</h6>
+                <h6>R</h6>
+                <h6>I</h6>
+                <h6>A</h6>
+                <h6>N</h6>
+            </div>
+            <div class="GRAY">
+                <h6>G</h6>
+                <h6>R</h6>
+                <h6>A</h6>
+                <h6>Y</h6>
+            </div>
         </div>
     </body>
 </html>
