--- a/index.html
+++ b/index.html
@@ -55,18 +55,18 @@
         </div>
         <div class="fin">
             <div class="DORIAN">
-                <h6>D</h6>
-                <h6>O</h6>
-                <h6>R</h6>
+                <h6 class="retard3">R>D</h6>
+                <h6 class="retard1">O</h6>
+                <h6 class="retard2">R</h6>
                 <h6>I</h6>
-                <h6>A</h6>
-                <h6>N</h6>
+                <h6 class="retard3">A</h6>
+                <h6 class="retard2"1>N</h6>
             </div>
             <div class="GRAY">
                 <h6>G</h6>
-                <h6>R</h6>
-                <h6>A</h6>
-                <h6>Y</h6>
+                <h6 class="retard3">R</h6>
+                <h6 class="retard1">A</h6>
+                <h6 class="retard2">R>Y</h6>
             </div>
         </div>
     </body>
