--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div class="conteneur">
             <h1>DORIAN GRAY</h1>
-            <h2>DORIAN GRAY</h2>
+            <h2 class="miroir">DORIAN GRAY</h2>
         </div>
         <div class="conteneur2">
             <img src="" alt="image"/>
@@ -18,7 +18,7 @@
         </div>
         <div class="conteneur3">
             <h1>DORIAN GRAY</h1>
-            <h3>DORIAN GRAY</h3>
+            <h3 class="miroir">DORIAN GRAY</h3>
         </div>
         <div class="conteneur4">
             <h3>.A</h3>
@@ -28,7 +28,7 @@
         </div>
         <div class="conteneur5">
             <h1>DORIAN GRAY</h1>
-            <h4>DORIAN GRAY</h4>
+            <h4 class="miroir">DORIAN GRAY</h4>
         </div>
         <div class="conteneur6">
             <img src="" alt="image" />
@@ -38,7 +38,7 @@
         </div>
         <div class="conteneur7">
             <h1>DORIAN GRAY</h1>
-            <h5>DORIAN GRAY</h5>
+            <h5 class="miroir">DORIAN GRAY</h5>
         </div>
         <div class="conteneur8">
             <h5>.A</h5>
@@ -48,7 +48,7 @@
         </div>
         <div class="conteneur9">
             <h1>DORIAN GRAY</h1>
-            <h6>DORIAN GRAY</h6>
+            <h6 class="miroir">DORIAN GRAY</h6>
         </div>
         <div class="conteneur10">
             <img src="" alt="image"/>
