--- a/index.html
+++ b/index.html
@@ -55,18 +55,18 @@
         </div>
         <div class="fin">
             <div class="DORIAN">
-                <h6 class="retard3">R>D</h6>
-                <h6 class="retard1">O</h6>
-                <h6 class="retard2">R</h6>
-                <h6>I</h6>
-                <h6 class="retard3">A</h6>
-                <h6 class="retard2"1>N</h6>
+                <h7 class="retard3">D</h7>
+                <h7 class="retard1">O</h7>
+                <h7 class="retard2">R</h7>
+                <h7>I</h7>
+                <h7 class="retard3">A</h7>
+                <h7 class="retard2"1>N</h7>
             </div>
             <div class="GRAY">
-                <h6>G</h6>
-                <h6 class="retard3">R</h6>
-                <h6 class="retard1">A</h6>
-                <h6 class="retard2">R>Y</h6>
+                <h7>G</h7>
+                <h7 class="retard3">R</h7>
+                <h7 class="retard1">A</h7>
+                <h7 class="retard2">Y</h7>
             </div>
         </div>
     </body>
