--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
             <h2 class="miroir">DORIAN GRAY</h2>
         </div>
         <div class="conteneur2">
-            <img src="" alt="image"/>
+            <div class="left">
+                <img class="portrait" src="" alt="image"/>
+            </div>
             <h2>.A</h2>
             <h2>.B</h2>
             <h2>.C</h2>
@@ -51,7 +53,7 @@
             <h6 class="miroir">DORIAN GRAY</h6>
         </div>
         <div class="conteneur10">
-            <img src="" alt="image"/>
+            <img src="" alt="image" alt="image"/>
         </div>
         <div class="fin">
             <div class="DORIAN">
