--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h4 class="miroir">DORIAN GRAY</h4>
         </div>
         <div class="conteneur6">
-            <img src="" alt="image" />
+            <img src="image/doryan gray .jpg" alt="image" />
             <h4>.A</h4>
             <h4>.B</h4>
             <h4>.C</h4>
