oups mauvais endroit

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </div>
         <div class="conteneur2">
             <div class="left">
-                <img class="portrait" src="" alt="image"/>
+                <img class="portrait" src="image/doryan gray .jpg" alt="image"/>
             </div>
             <h2>.A</h2>
             <h2>.B</h2>
@@ -33,7 +33,7 @@
             <h4 class="miroir">DORIAN GRAY</h4>
         </div>
         <div class="conteneur6">
-            <img src="image/doryan gray .jpg" alt="image" />
+            <img src="" alt="image" />
             <h4>.A</h4>
             <h4>.B</h4>
             <h4>.C</h4>
