--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <div class="left">
                 <img class="portrait" src="image/doryan gray .jpg" alt="image"/>
             </div>
-            <h2>.A</h2>
-            <h2>.B</h2>
-            <h2>.C</h2>
+            <h2 class="mot1">.A</h2>
+            <h2 class="mot2">.B</h2>
+            <h2 class="mot3">.C</h2>
         </div>
         <div class="conteneur3">
             <h1>DORIAN GRAY</h1>
