--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="conteneur">
-            <h1>DORIAN GRAY</h1>
+            <h1 class="titre">DORIAN GRAY</h1>
             <h2 class="miroir">DORIAN GRAY</h2>
             <div class="left">
                 <img class="portrait" src="image/doryan gray .jpg" alt="image"/>
