--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             <img src="" alt="image" />
         </div>
         <div class="conteneur3">
-            <h1>DORIAN GRAY</h1>
+            <h1 class="titre">DORIAN GRAY</h1>
             <h4 class="miroir">DORIAN GRAY</h4>
             <img src="" alt="image" />
-            <h4>.A</h4>
-            <h4>.B</h4>
-            <h4>.C</h4>
+            <h4 class="mot1">.A</h4>
+            <h4 class="mot2">.B</h4>
+            <h4 class="mot3">.C</h4>
         </div>
         <div class="conteneur4">
             <h1>DORIAN GRAY</h1>
