--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             <h2 class="mot3">.C</h2>
         </div>
         <div class="conteneur2">
-            <h1>DORIAN GRAY</h1>
+            <h1 class="titre">DORIAN GRAY</h1>
             <h3 class="miroir">DORIAN GRAY</h3>
-            <h3>.A</h3>
-            <h3>.B</h3>
-            <h3>.C</h3>
-            <img src="" alt="image" />
+            <h3 class="mot1..">.A</h3>
+            <h3 class="mot2..">.B</h3>
+            <h3 class="mot3..">.C</h3>
+            <img class="portrait.." src="" alt="image" />
         </div>
         <div class="conteneur3">
             <h1 class="titre">DORIAN GRAY</h1>
@@ -33,15 +33,15 @@
             <h4 class="mot3">.C</h4>
         </div>
         <div class="conteneur4">
-            <h1>DORIAN GRAY</h1>
+            <h1 class="titre">DORIAN GRAY</h1>
             <h5 class="miroir">DORIAN GRAY</h5>
-            <h5>.A</h5>
-            <h5>.B</h5>
-            <h5>.C</h5>
-            <img src="" alt="image"/>
+            <h5 class="mot1..">.A</h5>
+            <h5 class="mot2..">.B</h5>
+            <h5 class="mot3..">.C</h5>
+            <img class="portrait.." src="" alt="image"/>
         </div>
         <div class="conteneur5">
-            <h1>DORIAN GRAY</h1>
+            <h1 class="titre">DORIAN GRAY</h1>
             <h6 class="miroir">DORIAN GRAY</h6>
         </div>
         <div class="conteneur10">
