--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div class="conteneur2">
             <h1 class="titre">DORIAN GRAY</h1>
             <h3 class="miroir">DORIAN GRAY</h3>
-            <h3 class="mot1..">.A</h3>
-            <h3 class="mot2..">.B</h3>
-            <h3 class="mot3..">.C</h3>
-            <img class="portrait.." src="" alt="image" />
+            <h3 class="mot1by">.A</h3>
+            <h3 class="mot2by">.B</h3>
+            <h3 class="mot3by">.C</h3>
+            <img class="portraitby" src="" alt="image" />
         </div>
         <div class="conteneur3">
             <h1 class="titre">DORIAN GRAY</h1>
@@ -35,10 +35,10 @@
         <div class="conteneur4">
             <h1 class="titre">DORIAN GRAY</h1>
             <h5 class="miroir">DORIAN GRAY</h5>
-            <h5 class="mot1..">.A</h5>
-            <h5 class="mot2..">.B</h5>
-            <h5 class="mot3..">.C</h5>
-            <img class="portrait.." src="" alt="image"/>
+            <h5 class="mot1by">.A</h5>
+            <h5 class="mot2by">.B</h5>
+            <h5 class="mot3by">.C</h5>
+            <img class="portraitby" src="" alt="image"/>
         </div>
         <div class="conteneur5">
             <h1 class="titre">DORIAN GRAY</h1>
