--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
             <h3 class="mot1by">.A</h3>
             <h3 class="mot2by">.B</h3>
             <h3 class="mot3by">.C</h3>
-            <img class="portraitby" src="" alt="image" />
+            <img class="portraitby" src="image/doryan gray .jpg" alt="image" />
         </div>
         <div class="conteneur3">
             <h1 class="titre">DORIAN GRAY</h1>
             <h4 class="miroir">DORIAN GRAY</h4>
-            <img src="" alt="image" />
+            <img src="image/doryan gray .jpg" alt="image" />
             <h4 class="mot1">.A</h4>
             <h4 class="mot2">.B</h4>
             <h4 class="mot3">.C</h4>
@@ -38,13 +38,11 @@
             <h5 class="mot1by">.A</h5>
             <h5 class="mot2by">.B</h5>
             <h5 class="mot3by">.C</h5>
-            <img class="portraitby" src="" alt="image"/>
+            <img class="portraitby" src="image/doryan gray .jpg" alt="image"/>
         </div>
         <div class="conteneur5">
             <h1 class="titre">DORIAN GRAY</h1>
             <h6 class="miroir">DORIAN GRAY</h6>
-        </div>
-        <div class="conteneur10">
             <img src="" alt="image" alt="image"/>
         </div>
         <div class="fin">
