--- a/index.html
+++ b/index.html
@@ -22,12 +22,17 @@
             <h3 class="mot1by">.A</h3>
             <h3 class="mot2by">.B</h3>
             <h3 class="mot3by">.C</h3>
-            <img class="portraitby" src="image/doryan gray .jpg" alt="image" />
+            <div class="right">
+                <img class="portrait" src="image/doryan gray .jpg" alt="image" />
+            </div>
+            
         </div>
         <div class="conteneur3">
             <h1 class="titre">DORIAN GRAY</h1>
             <h4 class="miroir">DORIAN GRAY</h4>
-            <img src="image/doryan gray .jpg" alt="image" />
+            <div class="left">
+                <img class="portrait" src="image/doryan gray .jpg" alt="image"/>
+            </div>
             <h4 class="mot1">.A</h4>
             <h4 class="mot2">.B</h4>
             <h4 class="mot3">.C</h4>
@@ -38,7 +43,9 @@
             <h5 class="mot1by">.A</h5>
             <h5 class="mot2by">.B</h5>
             <h5 class="mot3by">.C</h5>
-            <img class="portraitby" src="image/doryan gray .jpg" alt="image"/>
+            <div class="right">
+                <img class="portrait" src="image/doryan gray .jpg" alt="image" />
+            </div>
         </div>
         <div class="conteneur5">
             <h1 class="titre">DORIAN GRAY</h1>
