--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="conteneur5">
             <h1 class="titre">DORIAN GRAY</h1>
             <h6 class="miroir">DORIAN GRAY</h6>
-            <img src="" alt="image" alt="image"/>
+            <img class="imagefinale" src="" alt="image" alt="image"/>
         </div>
         <div class="fin">
             <div class="DORIAN">
