ajout id="blanc"

--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
             <h4 class="mot3">.C</h4>
         </div>
         <div class="conteneur4">
-            <h1 class="titre">DORIAN GRAY</h1>
-            <h5 class="miroir">DORIAN GRAY</h5>
-            <h5 class="mot1by">.A</h5>
-            <h5 class="mot2by">.B</h5>
-            <h5 class="mot3by">.C</h5>
+            <h1 id="blanc" class="titre">DORIAN GRAY</h1>
+            <h5 id="blanc" class="miroir">DORIAN GRAY</h5>
+            <h5 id="blanc" class="mot1by">.A</h5>
+            <h5 id="blanc" class="mot2by">.B</h5>
+            <h5 id="blanc" class="mot3by">.C</h5>
             <div class="right">
                 <img class="portrait" src="image/doryan gray .jpg" alt="image" />
             </div>
         </div>
         <div class="conteneur5">
-            <h1 class="titre">DORIAN GRAY</h1>
-            <h6 class="miroir">DORIAN GRAY</h6>
+            <h1 id="blanc" class="titre">DORIAN GRAY</h1>
+            <h6 id="blanc" class="miroir">DORIAN GRAY</h6>
             <img class="imagefinale" src="" alt="image" alt="image"/>
         </div>
         <div class="fin">
