--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <h2 class="mot2">.B</h2>
             <h2 class="mot3">.C</h2>
         </div>
+        <div class="trans">
+            <p></p>
+        </div>
         <div class="conteneur2">
             <h1 class="titre">DORIAN GRAY</h1>
             <h3 class="miroir">DORIAN GRAY</h3>
@@ -25,7 +28,9 @@
             <div class="right">
                 <img class="portrait" src="image/doryan gray .jpg" alt="image" />
             </div>
-            
+        </div>
+        <div class="trans">
+            <p></p>
         </div>
         <div class="conteneur3">
             <h1 class="titre">DORIAN GRAY</h1>
@@ -37,6 +42,9 @@
             <h4 class="mot2">.B</h4>
             <h4 class="mot3">.C</h4>
         </div>
+        <div class="trans">
+            <p></p>
+        </div>
         <div class="conteneur4">
             <h1 id="blanc" class="titre">DORIAN GRAY</h1>
             <h5 id="blanc" class="miroir">DORIAN GRAY</h5>
@@ -46,6 +54,9 @@
             <div class="right">
                 <img class="portrait" src="image/doryan gray .jpg" alt="image" />
             </div>
+        </div>
+        <div class="trans">
+            <p></p>
         </div>
         <div class="conteneur5">
             <h1 id="blanc" class="titre">DORIAN GRAY</h1>
