--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h2 class="mot3">.C</h2>
         </div>
         <div class="trans">
-            <p></p>
+            <p>ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
         </div>
         <div class="conteneur2">
             <h1 class="titre">DORIAN GRAY</h1>
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="trans">
-            <p></p>
+            <p>ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
         </div>
         <div class="conteneur3">
             <h1 class="titre">DORIAN GRAY</h1>
@@ -43,7 +43,7 @@
             <h4 class="mot3">.C</h4>
         </div>
         <div class="trans">
-            <p></p>
+            <p>ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
         </div>
         <div class="conteneur4">
             <h1 id="blanc" class="titre">DORIAN GRAY</h1>
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div class="trans">
-            <p></p>
+            <p>ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
         </div>
         <div class="conteneur5">
             <h1 id="blanc" class="titre">DORIAN GRAY</h1>
