--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
                 <img class="portrait" src="image/doryan gray .jpg" alt="image" />
             </div>
         </div>
-        <div class="trans">
-            <p class="ABCD">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+        <div class="FBlanc">
+            <div class="trans">
+                <p class="ABCD">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+            </div>
         </div>
         <div class="conteneur5">
             <h1 id="blanc" class="titre">DORIAN GRAY</h1>
