--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>DORIAN GRAY</title>
+        <title>Le Portrait de DORIAN GRAY</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="Bonjour">
+            <h1 class="Axe">Le Portrait De Dorian Gray</h1>
+        </div>
         <div class="conteneur">
             <h1 class="titre">DORIAN GRAY</h1>
             <h2 class="miroir">DORIAN GRAY</h2>
