--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
             <h2 class="mot2">.B</h2>
             <h2 class="mot3">.C</h2>
         </div>
-        <div class="trans">
-            <p class="ABCD">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+        <div class="FBlanc">
+            <div class="trans">
+                <p class="ABCD">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+            </div>
         </div>
         <div class="conteneur2">
             <h1 class="titre">DORIAN GRAY</h1>
@@ -32,8 +34,10 @@
                 <img class="portrait" src="image/doryan gray .jpg" alt="image" />
             </div>
         </div>
-        <div class="trans">
-            <p class="ABCD">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+        <div class="FBlanc">
+            <div class="trans">
+                <p class="ABCD">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+            </div>
         </div>
         <div class="conteneur3">
             <h1 class="titre">DORIAN GRAY</h1>
@@ -45,8 +49,10 @@
             <h4 class="mot2">.B</h4>
             <h4 class="mot3">.C</h4>
         </div>
-        <div class="trans">
-            <p class="ABCD">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+        <div class="FBlanc">
+            <div class="trans">
+                <p class="ABCD">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+            </div>
         </div>
         <div class="conteneur4">
             <h1 id="blanc" class="titre">DORIAN GRAY</h1>
@@ -67,6 +73,11 @@
             <h1 id="blanc" class="titre">DORIAN GRAY</h1>
             <h6 id="blanc" class="miroir">DORIAN GRAY</h6>
             <img class="imagefinale" src="" alt="image" alt="image"/>
+        </div>
+        <div class="FBlanc">
+            <div class="trans">
+                <p class="ABCD">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+            </div>
         </div>
         <div class="fin">
             <div class="DORIAN">
