--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+
+        <!-- Titre Du Site -->
         <div class="Bonjour">
             <h1 class="Axe">Le Portrait De Dorian Gray</h1>
         </div>
+
+        <!-- Conteneur 1 -->
         <div class="conteneur">
             <h1 class="titre">DORIAN GRAY</h1>
             <h2 class="miroir">DORIAN GRAY</h2>
@@ -19,11 +23,15 @@
             <h2 class="mot2">.B</h2>
             <h2 class="mot3">.C</h2>
         </div>
+
+        <!-- Entre Conteneur -->
         <div class="FBlanc">
             <div class="trans">
                 <p class="ABCD">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
             </div>
         </div>
+
+        <!-- Conteneur 2 -->
         <div class="conteneur2">
             <h1 class="titre">DORIAN GRAY</h1>
             <h3 class="miroir">DORIAN GRAY</h3>
@@ -34,11 +42,15 @@
                 <img class="portrait" src="image/doryan gray .jpg" alt="image" />
             </div>
         </div>
+
+        <!-- Entre Conteneur -->
         <div class="FBlanc">
             <div class="trans">
                 <p class="ABCD">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
             </div>
         </div>
+
+        <!-- Conteneur 3 -->
         <div class="conteneur3">
             <h1 class="titre">DORIAN GRAY</h1>
             <h4 class="miroir">DORIAN GRAY</h4>
@@ -49,11 +61,15 @@
             <h4 class="mot2">.B</h4>
             <h4 class="mot3">.C</h4>
         </div>
+
+        <!-- Entre Conteneur -->
         <div class="FBlanc">
             <div class="trans">
                 <p class="ABCD">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
             </div>
         </div>
+
+        <!-- Conteneur 4 -->
         <div class="conteneur4">
             <h1 id="blanc" class="titre">DORIAN GRAY</h1>
             <h5 id="blanc" class="miroir">DORIAN GRAY</h5>
@@ -64,21 +80,29 @@
                 <img class="portrait" src="image/doryan gray .jpg" alt="image" />
             </div>
         </div>
+
+        <!-- Entre Conteneur -->
         <div class="FBlanc">
             <div class="trans">
                 <p class="ABCD">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
             </div>
         </div>
+
+        <!-- Conteneur 5 -->
         <div class="conteneur5">
             <h1 id="blanc" class="titre">DORIAN GRAY</h1>
             <h6 id="blanc" class="miroir">DORIAN GRAY</h6>
             <img class="imagefinale" src="" alt="image" alt="image"/>
         </div>
+
+        <!-- Entre Conteneur -->
         <div class="FBlanc">
             <div class="trans">
                 <p class="ABCD">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
             </div>
         </div>
+
+        <!-- Chute De Lettre-->
         <div class="fin">
             <div class="DORIAN">
                 <h7 class="retard3">D</h7>
