--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 
         <!-- Entre Conteneur -->
         <div class="FBlanc">
-            <div class="trans">
-                <p class="ABCD">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+            <div class="trans2">
+                <p class="ABCD2">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
             </div>
         </div>
 
@@ -121,5 +121,5 @@
         </div>
 
     </body>
-    
+
 </html>
