ajout vrai image

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1 class="titre">DORIAN GRAY</h1>
             <h2 class="miroir">DORIAN GRAY</h2>
             <div class="left">
-                <img class="portrait" src="image/doryan gray .jpg" alt="image"/>
+                <img class="portrait" src="image/portrait-de-dorian-gray site.png" alt="image"/>
             </div>
             <h2 class="mot1">.A</h2>
             <h2 class="mot2">.B</h2>
@@ -39,7 +39,7 @@
             <h3 class="mot2by">.B</h3>
             <h3 class="mot3by">.C</h3>
             <div class="right">
-                <img class="portrait" src="image/doryan gray .jpg" alt="image" />
+                <img class="portrait" src="image/portrait-de-dorian-gray site V2.png" alt="image" />
             </div>
         </div>
 
@@ -55,7 +55,7 @@
             <h1 class="titre">DORIAN GRAY</h1>
             <h4 class="miroir">DORIAN GRAY</h4>
             <div class="left">
-                <img class="portrait" src="image/doryan gray .jpg" alt="image"/>
+                <img class="portrait" src="image/portrait-de-dorian-gray site V3.png" alt="image"/>
             </div>
             <h4 class="mot1">.A</h4>
             <h4 class="mot2">.B</h4>
@@ -77,7 +77,7 @@
             <h5 id="blanc" class="mot2by">.B</h5>
             <h5 id="blanc" class="mot3by">.C</h5>
             <div class="right">
-                <img class="portrait" src="image/doryan gray .jpg" alt="image" />
+                <img class="portrait" src="image/portrait-de-dorian-gray site V4.png" alt="image" />
             </div>
         </div>
 
@@ -92,7 +92,7 @@
         <div class="conteneur5">
             <h1 id="blanc" class="titre">DORIAN GRAY</h1>
             <h6 id="blanc" class="miroir">DORIAN GRAY</h6>
-            <img class="imagefinale" src="" alt="image" alt="image"/>
+            <img class="imagefinale" src="image/portrait-de-dorian-gray site V5.png" alt="image" alt="image"/>
         </div>
 
         <!-- Entre Conteneur -->
