--- a/index.html
+++ b/index.html
@@ -6,117 +6,140 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-
-        <!-- Titre Du Site -->
-        <div class="Bonjour">
-            <h1 class="Axe">Le Portrait De Dorian Gray</h1>
-        </div>
-
-        <!-- Conteneur 1 -->
-        <div class="conteneur">
-            <h1 class="titre">DORIAN GRAY</h1>
-            <h2 class="miroir">DORIAN GRAY</h2>
-            <div class="left">
-                <img class="portrait" src="image/portrait-de-dorian-gray site.png" alt="image"/>
+            <!-- Fond Théatre -->
+        <div class="theatre">
+            
+                <!-- Titre Du Site -->
+            <div class="Bonjour">
+                <h1 class="Axe">Le Portrait De Dorian Gray</h1>
             </div>
-            <h2 class="mot1">.A</h2>
-            <h2 class="mot2">.B</h2>
-            <h2 class="mot3">.C</h2>
-        </div>
 
-        <!-- Entre Conteneur -->
-        <div class="FBlanc">
-            <div class="trans">
-                <p class="ABCD">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+            <!-- Conteneur 1 -->
+            <div class="conteneur">
+                <h1 class="titre">DORIAN GRAY</h1>
+                <h2 class="miroir">DORIAN GRAY</h2>
+                <div class="left">
+                    <img class="portrait" src="image/portrait-de-dorian-gray site.png" alt="image"/>
+                </div>
+                <h2 class="mot1">.A</h2>
+                <h2 class="mot2">.B</h2>
+                <h2 class="mot3">.C</h2>
             </div>
         </div>
 
-        <!-- Conteneur 2 -->
-        <div class="conteneur2">
-            <h1 class="titre">DORIAN GRAY</h1>
-            <h3 class="miroir">DORIAN GRAY</h3>
-            <h3 class="mot1by">.A</h3>
-            <h3 class="mot2by">.B</h3>
-            <h3 class="mot3by">.C</h3>
-            <div class="right">
-                <img class="portrait" src="image/portrait-de-dorian-gray site V2.png" alt="image" />
+            <!-- Fond Théatre -->
+        <div class="theatre">
+
+                <!-- Entre Conteneur -->
+            <div class="FBlanc">
+                <div class="trans">
+                    <p class="ABCD">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+                </div>
+            </div>
+
+            <!-- Conteneur 2 -->
+            <div class="conteneur2">
+                <h1 class="titre">DORIAN GRAY</h1>
+                <h3 class="miroir">DORIAN GRAY</h3>
+                <h3 class="mot1by">.A</h3>
+                <h3 class="mot2by">.B</h3>
+                <h3 class="mot3by">.C</h3>
+                <div class="right">
+                    <img class="portrait" src="image/portrait-de-dorian-gray site V2.png" alt="image" />
+                </div>
             </div>
         </div>
 
-        <!-- Entre Conteneur -->
-        <div class="FBlanc">
-            <div class="trans">
-                <p class="ABCD">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+            <!-- Fond Théatre -->
+        <div class="theatre">
+
+                <!-- Entre Conteneur -->
+            <div class="FBlanc">
+                <div class="trans">
+                    <p class="ABCD">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+                </div>
+            </div>
+
+            <!-- Conteneur 3 -->
+            <div class="conteneur3">
+                <h1 class="titre">DORIAN GRAY</h1>
+                <h4 class="miroir">DORIAN GRAY</h4>
+                <div class="left">
+                    <img class="portrait" src="image/portrait-de-dorian-gray site V3.png" alt="image"/>
+                </div>
+                <h4 class="mot1">.A</h4>
+                <h4 class="mot2">.B</h4>
+                <h4 class="mot3">.C</h4>
+            </div>
+        </div>
+        
+            <!-- Fond Théatre -->
+        <div class="theatre">
+
+                <!-- Entre Conteneur -->
+            <div class="FBlanc">
+                <div class="trans">
+                    <p class="ABCD">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+                </div>
+            </div>
+
+            <!-- Conteneur 4 -->
+            <div class="conteneur4">
+                <h1 id="blanc" class="titre">DORIAN GRAY</h1>
+                <h5 id="blanc" class="miroir">DORIAN GRAY</h5>
+                <h5 id="blanc" class="mot1by">.A</h5>
+                <h5 id="blanc" class="mot2by">.B</h5>
+                <h5 id="blanc" class="mot3by">.C</h5>
+                <div class="right">
+                    <img class="portrait" src="image/portrait-de-dorian-gray site V4.png" alt="image" />
+                </div>
+            </div>
+        </div>      
+
+            <!-- Fond Théatre -->
+        <div class="theatre">
+
+                <!-- Entre Conteneur -->
+            <div class="FBlanc">
+                <div class="trans">
+                    <p class="ABCD">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+                </div>
+            </div>
+
+            <!-- Conteneur 5 -->
+            <div class="conteneur5">
+                <h1 id="blanc" class="titre">DORIAN GRAY</h1>
+                <h6 id="blanc" class="miroir">DORIAN GRAY</h6>
+                <img class="imagefinale" src="image/portrait-de-dorian-gray site V5.png" alt="image" alt="image"/>
             </div>
         </div>
 
-        <!-- Conteneur 3 -->
-        <div class="conteneur3">
-            <h1 class="titre">DORIAN GRAY</h1>
-            <h4 class="miroir">DORIAN GRAY</h4>
-            <div class="left">
-                <img class="portrait" src="image/portrait-de-dorian-gray site V3.png" alt="image"/>
-            </div>
-            <h4 class="mot1">.A</h4>
-            <h4 class="mot2">.B</h4>
-            <h4 class="mot3">.C</h4>
-        </div>
+            <!-- Fond Théatre -->
+        <div class="theatre">
 
-        <!-- Entre Conteneur -->
-        <div class="FBlanc">
-            <div class="trans">
-                <p class="ABCD">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+                <!-- Entre Conteneur -->
+            <div class="FBlanc">
+                <div class="trans2">
+                    <p class="ABCD2">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+                </div>
             </div>
-        </div>
 
-        <!-- Conteneur 4 -->
-        <div class="conteneur4">
-            <h1 id="blanc" class="titre">DORIAN GRAY</h1>
-            <h5 id="blanc" class="miroir">DORIAN GRAY</h5>
-            <h5 id="blanc" class="mot1by">.A</h5>
-            <h5 id="blanc" class="mot2by">.B</h5>
-            <h5 id="blanc" class="mot3by">.C</h5>
-            <div class="right">
-                <img class="portrait" src="image/portrait-de-dorian-gray site V4.png" alt="image" />
-            </div>
-        </div>
-
-        <!-- Entre Conteneur -->
-        <div class="FBlanc">
-            <div class="trans">
-                <p class="ABCD">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
-            </div>
-        </div>
-
-        <!-- Conteneur 5 -->
-        <div class="conteneur5">
-            <h1 id="blanc" class="titre">DORIAN GRAY</h1>
-            <h6 id="blanc" class="miroir">DORIAN GRAY</h6>
-            <img class="imagefinale" src="image/portrait-de-dorian-gray site V5.png" alt="image" alt="image"/>
-        </div>
-
-        <!-- Entre Conteneur -->
-        <div class="FBlanc">
-            <div class="trans2">
-                <p class="ABCD2">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
-            </div>
-        </div>
-
-        <!-- Chute De Lettre-->
-        <div class="fin">
-            <div class="DORIAN">
-                <h7 class="retard3">D</h7>
-                <h7 class="retard1">O</h7>
-                <h7 class="retard2">R</h7>
-                <h7>I</h7>
-                <h7 class="retard3">A</h7>
-                <h7 class="retard2"1>N</h7>
-            </div>
-            <div class="GRAY">
-                <h7>G</h7>
-                <h7 class="retard3">R</h7>
-                <h7 class="retard1">A</h7>
-                <h7 class="retard2">Y</h7>
+            <!-- Chute De Lettre-->
+            <div class="fin">
+                <div class="DORIAN">
+                    <h7 class="retard3">D</h7>
+                    <h7 class="retard1">O</h7>
+                    <h7 class="retard2">R</h7>
+                    <h7>I</h7>
+                    <h7 class="retard3">A</h7>
+                    <h7 class="retard2"1>N</h7>
+                </div>
+                <div class="GRAY">
+                    <h7>G</h7>
+                    <h7 class="retard3">R</h7>
+                    <h7 class="retard1">A</h7>
+                    <h7 class="retard2">Y</h7>
+                </div>
             </div>
         </div>
 
