--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
                 <h1 id="blanc" class="titre">DORIAN GRAY</h1>
                 <h6 id="blanc" class="miroir">DORIAN GRAY</h6>
                 <img class="imagefinale" src="image/portrait-de-dorian-gray site V5.png" alt="image" alt="image"/>
+                <img class="flamme" src="image/Realistic-fire-animated-transparent-gif.gif">
             </div>
 
         </div>
@@ -151,7 +152,7 @@
 
                 <!-- Chute De Lettre-->
             <div class="fin">
-                
+
                     <!-- P1 -->
                 <div class="DORIAN">
                     <h7 class="retard3">D</h7>
