ajout <div> et rename les éléments

--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     </head>
 
     <body>
+        <div class="DébutSite">
+            <h1></h1>
+        </div>
             <!-- Fond Théatre -->
         <div class="theatre">
             
                 <!-- Titre Du Site -->
             <div class="Bonjour">
-                <h1 class="Axe">Le Portrait De Dorian Gray</h1>
+                <h1 class="Axe blanc">Le Portrait De Dorian Gray</h1>
             </div>
 
             <!-- Conteneur 1 -->
@@ -110,11 +113,11 @@
             <!-- Conteneur 4 -->
             <div class="conteneur4">
 
-                <h1 id="blanc" class="titre">DORIAN GRAY</h1>
-                <h5 id="blanc" class="miroir">DORIAN GRAY</h5>
-                <h5 id="blanc" class="mot1by">.A</h5>
-                <h5 id="blanc" class="mot2by">.B</h5>
-                <h5 id="blanc" class="mot3by">.C</h5>
+                <h1 id="decroche" class="blanc titre">DORIAN GRAY</h1>
+                <h5 class="blanc miroir">DORIAN GRAY</h5>
+                <h5 class="blanc mot1by">.A</h5>
+                <h5 class="blanc mot2by">.B</h5>
+                <h5 class="blanc mot3by">.C</h5>
                 <div class="right">
                     <img class="portrait" src="image/portrait-de-dorian-gray site V4.png" alt="image" />
                 </div>
@@ -135,8 +138,8 @@
 
             <!-- Conteneur 5 -->
             <div class="conteneur5">
-                <h1 id="blanc" class="titre">DORIAN GRAY</h1>
-                <h6 id="blanc" class="miroir">DORIAN GRAY</h6>
+                <h1 class="blanc titre">DORIAN GRAY</h1>
+                <h6 class="blanc miroir">DORIAN GRAY</h6>
                 <img class="imagefinale" src="image/portrait-de-dorian-gray site V5.png" alt="image" alt="image"/>
                 <img class="flamme" src="image/Realistic-fire-animated-transparent-gif.gif">
                 
