--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <div class="DébutSite">
+       <!-- <div class="DébutSite">
             <h1></h1>
         </div>
             <!-- Fond Théatre -->
