--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <body>
        <!-- <div class="DébutSite">
             <h1></h1>
-        </div>
+        </div> -->
+
             <!-- Fond Théatre -->
         <div class="theatre">
             
