--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
                 <h2 class="mot3">.C</h2>
 
             </div>
-
         </div>
 
             <!-- Fond Théatre -->
@@ -66,12 +65,13 @@
             </div>
 
         </div>
-
+    
+    
             <!-- Fond Théatre -->
         <div class="theatre">
 
                 <!-- Entre Conteneur -->
-            <div class="FBlanc">
+            <div class="FBlanc3">
 
                 <div class="trans">
                     <p class="ABCD">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
@@ -131,7 +131,7 @@
         <div class="theatre">
 
                 <!-- Entre Conteneur -->
-            <div class="FBlanc">
+            <div class="FBlanc3">
                 <div class="trans">
                     <p class="ABCD">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
                 </div>
@@ -149,9 +149,8 @@
         </div>
 
             <!-- Conteneur Fin -->
-        <div class="FBlanc">
-
-            <div class="trans2">
+        <div class="FBlanc4">
+            <div class="trans3 scene">
                 <p class="ABCD2">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
             </div>
 
