<div> et ajout <img>
changement de class de la <div>
et ajout d'une image dans la div

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
                 <div class="left">
                     <img class="portrait" src="image/portrait-de-dorian-gray site.png" alt="image"/>
+                    <img class="portrait" src="image/portrait-de-dorian-gray site V2.png">
                 </div>
 
                 <h2 class="mot1">.A</h2>
@@ -148,10 +149,11 @@
 
         </div>
 
-            <!-- Conteneur Fin -->
+        <!-- Conteneur Fin -->
         <div class="FBlanc4">
-            <div class="trans3 scene">
-                <p class="ABCD2">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+            <div class="scene">
+                <img class="thea" src="image/théatre4.png">
+                <p class="ABCDE">THE END</p>
             </div>
 
                 <!-- Chute De Lettre-->
