delete maj and `$@

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div class="theatre">
             
                 <!-- Titre Du Site -->
-            <div class="Bonjour">
-                <h1 class="Axe blanc">Le Portrait De Dorian Gray</h1>
+            <div class="bonjour">
+                <h1 class="axe blanc">Le Portrait De Dorian Gray</h1>
             </div>
 
             <!-- Conteneur 1 -->
@@ -27,8 +27,8 @@
                 <h2 class="miroir">DORIAN GRAY</h2>
 
                 <div class="left">
-                    <img class="portrait" src="image/portrait-de-dorian-gray site.png" alt="image"/>
-                    <img class="portrait" src="image/portrait-de-dorian-gray site V2.png">
+                    <img class="portrait" src="image/portrait-de-dorian-gray-site.png" alt="image"/>
+                    <img class="portrait" src="image/portrait-de-dorian-gray-siteV2.png">
                 </div>
 
                 <h2 class="mot1">.A</h2>
@@ -42,10 +42,10 @@
         <div class="theatre">
 
                 <!-- Entre Conteneur -->
-            <div class="FBlanc">
+            <div class="fblanc">
 
                 <div class="trans">
-                    <p class="ABCD">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+                    <p class="abcd">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
                 </div>
 
             </div>
@@ -60,7 +60,7 @@
                 <h3 class="mot3by">.C</h3>
 
                 <div class="right">
-                    <img class="portrait" src="image/portrait-de-dorian-gray site V2.png" alt="image" />
+                    <img class="portrait" src="image/portrait-de-dorian-gray-siteV2.png" alt="image" />
                 </div>
 
             </div>
@@ -72,10 +72,10 @@
         <div class="theatre">
 
                 <!-- Entre Conteneur -->
-            <div class="FBlanc3">
+            <div class="fblanc3">
 
                 <div class="trans">
-                    <p class="ABCD">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+                    <p class="abcd">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
                 </div>
 
             </div>
@@ -87,7 +87,7 @@
                 <h4 class="miroir">DORIAN GRAY</h4>
 
                 <div class="left">
-                    <img class="portrait" src="image/portrait-de-dorian-gray site V3.png" alt="image"/>
+                    <img class="portrait" src="image/portrait-de-dorian-gray-siteV3.png" alt="image"/>
                 </div>
 
                 <h4 class="mot1">.A</h4>
@@ -102,11 +102,11 @@
         <div class="theatre">
 
                 <!-- Entre Conteneur -->
-            <div class="FBlanc">
+            <div class="fblanc">
 
                 <div class="trans">
 
-                    <p class="ABCD">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+                    <p class="abcd">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
 
                 </div>
 
@@ -121,7 +121,7 @@
                 <h5 class="blanc mot2by">.B</h5>
                 <h5 class="blanc mot3by">.C</h5>
                 <div class="right">
-                    <img class="portrait" src="image/portrait-de-dorian-gray site V4.png" alt="image" />
+                    <img class="portrait" src="image/portrait-de-dorian-gray-siteV4.png" alt="image" />
                 </div>
 
             </div>
@@ -132,9 +132,9 @@
         <div class="theatre">
 
                 <!-- Entre Conteneur -->
-            <div class="FBlanc3">
+            <div class="fblanc3">
                 <div class="trans">
-                    <p class="ABCD">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+                    <p class="abcd">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
                 </div>
             </div>
 
@@ -150,17 +150,17 @@
         </div>
 
         <!-- Conteneur Fin -->
-        <div class="FBlanc4">
+        <div class="fblanc4">
             <div class="scene">
                 <img class="thea" src="image/théatre4.png">
-                <p class="ABCDE">THE END</p>
+                <p class="abcde">THE END</p>
             </div>
 
                 <!-- Chute De Lettre-->
             <div class="fin">
 
                     <!-- P1 -->
-                <div class="DORIAN">
+                <div class="dorian">
                     <h7 class="retard3">D</h7>
                     <h7 class="retard1">O</h7>
                     <h7 class="retard2">R</h7>
@@ -170,7 +170,7 @@
                 </div>
 
                     <!-- P2 -->
-                <div class="GRAY">
+                <div class="gray">
                     <h7>G</h7>
                     <h7 class="retard3">R</h7>
                     <h7 class="retard1">A</h7>
