delete maj and @$£

--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
             <div class="conteneur5">
                 <h1 class="blanc titre">DORIAN GRAY</h1>
                 <h6 class="blanc miroir">DORIAN GRAY</h6>
-                <img class="imagefinale" src="image/portrait-de-dorian-gray site V5.png" alt="image" alt="image"/>
-                <img class="flamme" src="image/Realistic-fire-animated-transparent-gif.gif">
+                <img class="imagefinale" src="image/portrait-de-dorian-gray-siteV5.png" alt="image" alt="image"/>
+                <img class="flamme" src="image/realistic-fire-animated-transparent-gif.gif">
                 
             </div>
 
@@ -153,7 +153,7 @@
         <!-- Conteneur Fin -->
         <div class="fblanc4">
             <div class="scene">
-                <img class="thea" src="image/théatre4.png">
+                <img class="thea" src="image/theatre4.png">
                 <p class="abcde">THE END</p>
             </div>
 
