--- a/index.html
+++ b/index.html
@@ -26,12 +26,8 @@
 
                 <h1 class="titre">DORIAN GRAY</h1>
                 <h2 class="miroir">DORIAN GRAY</h2>
-
-                <div class="left">
-                    <img class="portrait" src="image/portrait-de-dorian-gray-site.png" alt="image"/>
-                    <img class="portrait" src="image/portrait-de-dorian-gray-siteV2.png">
-                </div>
-
+                <img class="portrait left" src="image/portrait-de-dorian-gray-site.png" alt="image"/>
+                <img class="portrait left" src="image/portrait-de-dorian-gray-siteV2.png">
                 <h2 class="mot1">.A</h2>
                 <h2 class="mot2">.B</h2>
                 <h2 class="mot3">.C</h2>
@@ -59,10 +55,7 @@
                 <h3 class="mot1by">.A</h3>
                 <h3 class="mot2by">.B</h3>
                 <h3 class="mot3by">.C</h3>
-
-                <div class="right">
-                    <img class="portrait" src="image/portrait-de-dorian-gray-siteV2.png" alt="image" />
-                </div>
+                <img class="portrait right" src="image/portrait-de-dorian-gray-siteV2.png" alt="image" />
 
             </div>
 
@@ -86,11 +79,7 @@
 
                 <h1 class="titre">DORIAN GRAY</h1>
                 <h4 class="miroir">DORIAN GRAY</h4>
-
-                <div class="left">
-                    <img class="portrait" src="image/portrait-de-dorian-gray-siteV3.png" alt="image"/>
-                </div>
-
+                <img class="portrait left" src="image/portrait-de-dorian-gray-siteV3.png" alt="image"/>
                 <h4 class="mot1">.A</h4>
                 <h4 class="mot2">.B</h4>
                 <h4 class="mot3">.C</h4>
@@ -121,9 +110,7 @@
                 <h5 class="blanc mot1by">.A</h5>
                 <h5 class="blanc mot2by">.B</h5>
                 <h5 class="blanc mot3by">.C</h5>
-                <div class="right">
-                    <img class="portrait" src="image/portrait-de-dorian-gray-siteV4.png" alt="image" />
-                </div>
+                <img class="portrait right" src="image/portrait-de-dorian-gray-siteV4.png" alt="image" />
 
             </div>
 
