delete class"blanc" and switch id of conteneur

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             <!-- Conteneur 2 -->
             <div class="conteneur2">
 
-                <h1 class="blanc titre">DORIAN GRAY</h1>
-                <h3 class="blanc miroir">DORIAN GRAY</h3>
+                <h1 class="titre">DORIAN GRAY</h1>
+                <h3 class="miroir">DORIAN GRAY</h3>
                 <h3 class="blanc mot1by">.A</h3>
                 <h3 class="blanc mot2by">.B</h3>
                 <h3 class="blanc mot3by">.C</h3>
@@ -78,8 +78,8 @@
             <!-- Conteneur 3 -->
             <div class="conteneur3">
                 
-                <h1 class="blanc titre">DORIAN GRAY</h1>
-                <h4 class="blanc miroir">DORIAN GRAY</h4>
+                <h1 class="titre">DORIAN GRAY</h1>
+                <h4 class="miroir">DORIAN GRAY</h4>
                 <img class="left" src="image/portrait-de-dorian-gray-siteV3.png" alt="image" />
                 <img class="portrait left" src="image/portrait-de-dorian-gray-siteV4.png" alt="image" />
                 <h4 class="blanc mot1">.A</h4>
@@ -107,8 +107,8 @@
             <!-- Conteneur 4 -->
             <div class="conteneur4">
                 
-                <h1 id="decroche" class="blanc titre">DORIAN GRAY</h1>
-                <h5 class="blanc miroir">DORIAN GRAY</h5>
+                <h1 class="titre">DORIAN GRAY</h1>
+                <h5 class="miroir">DORIAN GRAY</h5>
                 <h5 class="blanc mot1by">.A</h5>
                 <h5 class="blanc mot2by">.B</h5>
                 <h5 class="blanc mot3by">.C</h5>
@@ -131,7 +131,7 @@
 
             <!-- Conteneur 5 -->
             <div class="conteneur5">
-                <h1 class="blanc titre">DORIAN GRAY</h1>
+                <h1 id="decroche" class="blanc titre">DORIAN GRAY</h1>
                 <h6 class="blanc miroir">DORIAN GRAY</h6>
                 <img class="imagefinale" src="image/portrait-de-dorian-gray-siteV5.png" alt="image" alt="image" />
                 <img class="flamme" src="image/realistic-fire-animated-transparent-gif.gif" alt="image" />
