--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
             <!-- Conteneur 5 -->
             <div class="conteneur5">
-                <h1 id="decroche" class="blanc titre">DORIAN GRAY</h1>
+                <h1 id="decroche" class="blanc horror titre">DORIAN GRAY</h1>
                 <h6 class="blanc miroir">DORIAN GRAY</h6>
                 <img class="imagefinale" src="image/portrait-de-dorian-gray-siteV5.png" alt="image" alt="image" />
                 <img class="flamme" src="image/realistic-fire-animated-transparent-gif.gif" alt="image" />
