switch class"axe"

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
             <h1></h1>
         </div> -->
 
-            <!-- Fond Théatre -->
+        <!-- Fond Théatre -->
         <div class="theatre">
             
-                <!-- Titre Du Site -->
-            <div class="bonjour">
-                <h1 class="axe blanc">Le Portrait De Dorian Gray</h1>
+            <!-- Titre Du Site -->
+            <div class="axe bonjour">
+                <h1 class="blanc">Le Portrait De Dorian Gray</h1>
             </div>
 
             <!-- Conteneur 1 -->
