add div id="bouton" with <p class"abcde" between

--- a/index.html
+++ b/index.html
@@ -144,7 +144,9 @@
         <div class="fblanc4">
             <div class="scene">
                 <img class="thea" src="image/theatre4.png" alt="image" />
-                <p class="abcde">THE END</p>
+                <div id="bouton">
+                    <p class="abcde">THE END</p>
+                </div>
             </div>
 
                 <!-- Chute De Lettre-->
