--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <title>Le Portrait de DORIAN GRAY</title>
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Monoton&display=swap" rel="stylesheet">
     </head>
 
     <body>
